Fix login form separator not showing up

--- a/app/styles/forms/login.less
+++ b/app/styles/forms/login.less
@@ -14,7 +14,7 @@ section#login {
       border-radius: 3px;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      border-left: none;
+      border-left: 1px solid @brandr-grey;
     }
 
   }
